openshift/app-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: #{APPNAME}#
  labels:
    app: #{APPNAME}#
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: false
        containerNames:
          - #{APPNAME}#
        from:
          kind: ImageStreamTag
          name: #{APPNAME}#:latest
  replicas: 1   
  revisionHistoryLimit: 10
  selector:
    app: #{APPNAME}#
  template:
    metadata:
      labels:
        app: #{APPNAME}#
    spec:
      containers:
      - name: #{APPNAME}#
        resources:
          requests:
            cpu: 0.2
            memory: 200Mi
          limits:
            cpu: 0.2
            memory: 200Mi
        image: image-registry.openshift-image-registry.svc:5000/dummy/#{APPNAME}#:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: #{APPNAME}#
spec:
  selector:
    app: #{APPNAME}#
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: #{APPNAME}#
spec:
  to:
    kind: Service
    name: #{APPNAME}#
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
